--- a/.gitmodules
+++ b/.gitmodules
@@ -1,6 +1,6 @@
 [submodule "3rdparty/raylib"]
 	path = 3rdparty/raylib
-	url = https://github.com/raysan5/raylib.git
+	url = https://github.com/heretique/raylib.git
 [submodule "3rdparty/imgui"]
 	path = 3rdparty/imgui
 	url = https://github.com/ocornut/imgui.git
